fixed service menu on mobile

--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -20,3 +20,16 @@
 a#mailer{
   color: #FFE5B4;
 }
+@media only screen and (max-width: 750px) {
+  .footer{
+    background: black;
+    color: white;
+    height: 140px;
+    width: 100%;
+    padding-top: .2%;
+    margin-top: 30%;
+    text-align: center;
+    display: block;
+    font-family: 'Open Sans Condensed', sans-serif;
+  }
+}
