--- a/src/components/Service/index.css
+++ b/src/components/Service/index.css
@@ -45,6 +45,7 @@
     margin-top: 3%;
     border: none;
     padding: 3%;
+    width: 85%;
   }
   .tool-img{
     width: 85%;
